...

                Divider()

                // Content section
                content
            }
            .navigationTitle("Explore APODs")
            .navigationBarTitleDisplayMode(.inline)
            .navigationDestination(item: $viewModel.destination) { destination in
                switch destination {
                case .imageDetail(let apod):
                    ImageDetailView(apod: apod, imageCache: imageCache)
                }
...
            .labelsHidden()
            .padding()
            .navigationTitle("Select Date")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .confirmationAction) {
                    Button("Done") {
                        activeSheet = nil
                        Task {
                            await viewModel.dateChanged()
                        }
                    }
                }
...
